bug 193 - fix word break on firefox

--- a/web/states/projects/projects.scss
+++ b/web/states/projects/projects.scss
@@ -125,7 +125,9 @@
     line-height: 1.3;
     margin-bottom: 15px;
     padding-right: 30px;
-    word-break: break-word;
+    white-space: pre-wrap;
+    word-break: break-all;
+    word-wrap: break-word;
 }
 
 .vg__image--caption-tag {
